--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 }
 body{
     background-color: #b4a7d6;
-    color: #fff;
+    /* color: #fff; */
+    /* color: #8e7cc3; */
+    color: #674ea7;
     font-family: 'Roboto Mono', sans-serif;
     display: flex;
     align-items: center;
@@ -22,6 +24,7 @@ i{
     justify-content: center;
     text-align: center;
     margin: 30px 50px;
+    width: 100%;
 }
 .counter{
     font-size: 60px;
